--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "crypto-payment-site",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
