--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "cloudinary": "^2.6.0",
+    "cloudinary": "1.30.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0",
